Solved the map tile and stretch with the device widthk

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -231,9 +231,14 @@ body {
 		margin-top: 20px;
 	} 
 
-	#menu-tile, #specials-tile, #map-tile {
+	#menu-tile, #specials-tile {
 		width: 360px;
     margin: 0px auto 20px auto;
+	}
+
+	#map-tile {
+		width: 100%;
+		margin: 0px auto 20px auto;
 	}
 
 }
@@ -253,8 +258,5 @@ body {
     margin: 0 auto 15px;
   }
 
-  #map-tile{
-  	width: 75vw;
-  	margin: 0 auto 15px; 
-  }
+  
 }
